--- a/README
+++ b/README
@@ -1,62 +1,49 @@
-                    Finite Element Discretization Library
-                                   __
-                       _ __ ___   / _|  ___  _ __ ___
-                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
-                      | | | | | ||  _||  __/| | | | | |
-                      |_| |_| |_||_|   \___||_| |_| |_|
+This repository is a fork of MFEM, extended with classes for CFOSLS (constrained first-order
+system least squares) framework. The underlying version of MFEM is 3.3. The code can be built
+in the same way as MFEM, see http://mfem.org/building.
 
-                               http://mfem.org
+To learn more about MFEM, visit mfem.org and/or read README in https://github.com/mfem/mfem.
 
-MFEM is a modular parallel C++ library for finite element methods. Its goal is
-to enable the research and development of scalable finite element discretization
-and solver algorithms through general finite element abstractions, accurate and
-flexible visualization, and tight integration with the hypre library.
+Incomplete list of new classes (w.r.t to base version of MFEM):
+- ParMeshCyl: a class for handling space-time cylinder meshes with arbitrary base mesh.
+- 4D finite element spaces for H(div), H(divskew), H(curl), H^1 and L^2 and 4D meshes 
+  (also available in https://github.com/mfem/mfem/tree/4d_dev)
+  
+- FOSLSFormulation: weak formulation of a (C)FOSLS problem in terms of bilinear and linear forms 
+  (BilinearForm- and LinearFormIntegrators in MFEM)
+- FOSLSFEFormulation: weak formulation of a FOSLSProblem with spaces specified
+  (FiniteElementCollections in MFEM)
+- FOSLSProblem: base class for a (C)FOSLS problem on a given mesh
+  (incl. FiniteElementSpaces in MFEM)
+  
+- GeneralHierarchy: hierarchy of meshes and f.e. spaces defined on them
+- FOSLSProblHierarchy: hierarchy of FOSLSProblems living at a hierarchy of meshes
 
-For building instructions, see the file INSTALL, or type "make help". Copyright
-information and licensing restrictions can be found in the file COPYRIGHT.
+- MultigridToolsHierarchy: a hierarchy of various ingredients which could be used for multigrid
+  (or other preconditioners), including. e.g., local non-overlapping Schwarz smoothers 
+  implemented in LocalProblemSolver class)
+- GeneralMultigrid, Multigrid and MonolithicMultigrid: multigrid preconditioners
+- GeneralMinConstrSolver: a multilevel minimization solver which solves a CFOSLS problem by 
+  minimizing the FOSLS functional subject to the constraint
+- DivConstraintSolver: a multilevel method for finding a particular solution to the constraint
+  $\div \sigma = f$
+  
+- TimeStepping: a class for time-slabbing (splitting the problem into space-time slabs and
+  solving sub-problems in each time slab)
+- TwoGridTimeStepping: for emulating parallel-in-time two-grid solver.
 
-The best starting point for new users interested in MFEM's features is the
-interactive documentation in examples/README.html.
+- FOSLSEstimator: error estimator for a FOSLS problem
 
-Conceptually, MFEM can be viewed as a finite element toolbox that provides the
-building blocks for developing finite element algorithms in a manner similar to
-that of MATLAB for linear algebra methods. In particular, MFEM provides support
-for arbitrary high-order H1-conforming, discontinuous (L2), H(div)-conforming,
-H(curl)-conforming and NURBS finite element spaces in 2D and 3D, as well as many
-bilinear, linear and nonlinear forms defined on them. It enables the quick
-prototyping of various finite element discretizations, including Galerkin
-methods, mixed finite elements, Discontinuous Galerkin (DG), isogeometric
-analysis, hybridization and Discontinuous Petrov-Galerkin (DPG) approaches.
+- Specific integrators and classes for CFOSLS formulation of linear transport, heat, wave and
+  laplace equations
+  
+Incomplete list of features (improvements) upon MFEM:
+- 4D finite element spaces & 4D meshes
+- general multigrid preconditioners and minimization solver
+- time-slabbing
+- AMR in FOSLS framework
+- various examples of solving PDEs in CFOSLS formulations using the new classes
 
-MFEM includes classes for dealing with a wide range of mesh types: triangular,
-quadrilateral, tetrahedral and hexahedral, as well as surface and topologically
-periodical meshes. It has general support for mesh refinement, including local
-conforming and non-conforming (AMR) adaptive refinement. Arbitrary element
-transformations, allowing for high-order mesh elements with curved boundaries,
-are also supported.
+For examples, see the examples/ directory (and examples/archive for some older example 
+codes).
 
-MFEM is commonly used as a "finite element to linear algebra translator", since
-it can take a problem described in terms of finite element-type objects, and
-produce the corresponding linear algebra vectors and sparse matrices. In order
-to facilitate this, MFEM uses compressed sparse row (CSR) sparse matrix storage
-and includes simple smoothers and Krylov solvers, such as PCG, MINRES and GMRES,
-as well as support for sequential sparse direct solvers from the SuiteSparse
-library. Nonlinear solvers (the Newton method), eigensolvers (LOBPCG), and
-several explicit and implicit Runge-Kutta time integrators are also available.
-
-MFEM supports MPI-based parallelism throughout the library, and can readily be
-used as a scalable unstructured finite element problem generator. MFEM-based
-applications require minimal changes to transition from a serial to a
-high-performing parallel version of the code, where they can take advantage of
-the integrated scalable linear solvers from the hypre library. Comprehensive
-support for other external packages, e.g. PETSc and SUNDIALS is also included,
-giving access to many additional linear and nonlinear solvers, preconditioners,
-time integrators, etc.
-
-For examples of using MFEM, see the examples/ and miniapps/ directories, as well
-as the OpenGL visualization tool GLVis which is available at http://glvis.org.
-
-This project is released under the LGPL v2.1 license. See LICENSE file for full
-details.
-
-LLNL Release Number: LLNL-CODE-443211
